--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "perm.fest@yandex.ru"
         }
     ],
-    "require": {},
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.11"
+    },
     "bin": [
         "bin/brain-games"
     ]
