--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,11 @@
         "files": [
             "src/Cli.php"
         ]
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.4"
+    },
+    "scripts": {
+        "phpcs": "phpcs"
     }
 }
